@startuml
' Configuration
skinparam linetype ortho
skinparam classAttributeIconSize 0
title Task Management Database Schema

entity "users" as users {
  +id : UUID [PK]
  --
  name : TEXT
  email : TEXT [UNIQUE]
  password : TEXT
  avatar : TEXT
  is_active : BOOLEAN
  role : VARCHAR(20)
  provider : VARCHAR(20)
  device_fcm_token : TEXT
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "task_groups" as task_groups {
  +id : UUID [PK]
  --
  name : TEXT
  description : TEXT
  created_by : UUID [FK → users.id]
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "projects" as projects {
  +id : UUID [PK]
  --
  name : TEXT
  description : TEXT
  start_date : DATE
  end_date : DATE
  logo_image : TEXT
  task_group_id : UUID [FK → task_groups.id]
  created_by : UUID [FK → users.id]
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "tasks" as tasks {
  +id : UUID [PK]
  --
  title : TEXT
  status : VARCHAR(20)
  due_at : TIMESTAMP
  notify_enabled : BOOLEAN
  notify_offset_minutes : INTEGER
  project_id : UUID [FK → projects.id]
  created_by : UUID [FK → users.id]
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "notifications" as notifications {
  +id : UUID [PK]
  --
  title : TEXT
  message : TEXT
  is_read : BOOLEAN
  user_id : UUID [FK → users.id]
  task_id : UUID [FK → tasks.id]
  created_at : TIMESTAMP
  sent_at : TIMESTAMP
}

entity "otps" as otps {
  +id : UUID [PK]
  --
  email : TEXT
  code : TEXT
  type : VARCHAR(20)
  user_id : UUID [FK → users.id, NULL]
  expires_at : TIMESTAMP
  created_at : TIMESTAMP
}

' Relationships
users ||--o{ task_groups : "creates"
users ||--o{ projects : "creates"
users ||--o{ tasks : "creates"
users ||--o{ notifications : "receives"
users ||--o{ otps : "has"

task_groups ||--o{ projects : "contains"

projects ||--o{ tasks : "contains"
tasks ||--o{ notifications : "triggers"

@enduml
